Modified some java solutions for existing problems.